# miaomiao-sijiao

./: .env.example  .gitignore  Dockerfile  PLAN.md  PROGRESS.md  README.md  audit-server.ps1  deploy-backend.ps1  docker-compose.yml  get-admin-token.ps1  pyproject.toml  run.py  test-live-chat.ps1  verify-deploy.ps1  猫教.docx
server/: .env.example  pyproject.toml
server/docs/: schema.sql
server/ewa/: __init__.py  config.py
server/ewa/admin/: __init__.py  api.py  assets.py  auth.py  repository.py
server/ewa/api/: __init__.py
server/ewa/community/: api.py
server/ewa/core/: app.py  audio_utils.py  logging.py  middleware.py
server/ewa/extension/: __init__.py  ext_api.py  feedback.py  lesson_api.py  mood.py  scoring.py  store.py  subtitle.py
server/ewa/llm/: __init__.py  client.py  qwen_voice.py
server/ewa/speech/: __init__.py  api.py
server/ewa/website/: api.py  repository.py  service.py  tts.py
server/frontend/: mdx-components.tsx  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
server/frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
server/frontend/components/: app-wrapper.tsx  mute-toggle.tsx  pet-assistant.tsx  project-video.tsx  site-header.tsx
server/frontend/context/: voice-context.tsx
server/frontend/e2e/: helpers.ts
server/frontend/lib/: community-api.ts  site.ts  (+6 more)
server/scripts/: fetch_subtitle.py  generate_fallback.py  seed_community.py
server/tests/: test_admin_assets.py  test_chat_navigation.py  test_lesson_e2e.py
(+142 files in other folders)
