[project]
name = "miaomiao"
version = "0.3.0"
description = "妙喵私教 — 把教学视频变成一对一私教"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
include = ["ewa*"]

[tool.ruff]
target-version = "py311"
line-length = 100
